heroic-tour/src/styles.css
/* oh, right, these are imported via angular.json */

/* Responsive Styles */
/* is there a reason for why that breakpoint is at 767 exactly
    round numbers look better
*/
@media screen and (max-width: 767px) {

    .card-container > *:not(.circle-link),
    .terminal {
      width: 100%;
    }

    .card:not(.highlight-card) {
      height: 16px;
      margin: 8px 0;
    }

    .card.highlight-card span {
      margin-left: 72px;
    }
  }

/* same thing with this breakpoint, why not 580 for instance */
@media screen and (max-width: 575px) {

}

html {
    background-color: black;
    color: deeppink;
}

a {
    color: cyan;
    text-decoration: none;
    padding-bottom: 1px;
    border-bottom: 1px solid;
}

a:visited {
    color: violet;
}

header nav {
    display: flex;
    flex-flow: row nowrap;
    gap: 1em;
}

input {
    background-color: violet;
}

button {
    background-color: cyan;
}

button[type="submit"] {
    margin-left: 1em;
}

